--- a/BulkyWeb/appsettings.Development.json
+++ b/BulkyWeb/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database = Bulky;Trusted_Connection= True;TrustServerCertificate=True"
   }
 }
