Added MVC Areas and dropdown for Admin Area

--- a/BulkyWeb/BulkyWeb.csproj
+++ b/BulkyWeb/BulkyWeb.csproj
@@ -13,10 +13,29 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0-rc.2.23509.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Bulky.DataAcess\Bulky.DataAcess.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="Areas\Admin\Views\Category\Create.cshtml" />
+    <AdditionalFiles Include="Areas\Admin\Views\Category\Delete.cshtml" />
+    <AdditionalFiles Include="Areas\Admin\Views\Category\Edit.cshtml" />
+    <AdditionalFiles Include="Areas\Admin\Views\Category\Index.cshtml" />
+    <AdditionalFiles Include="Areas\Customer\Views\Home\Index.cshtml" />
+    <AdditionalFiles Include="Areas\Customer\Views\Home\Privacy.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
   </ItemGroup>
 
 </Project>
